--- a/riscv_compile/Makefile
+++ b/riscv_compile/Makefile
@@ -1,27 +1,45 @@
-.PHONY: clean $(ALL) rom runall
+.PHONY: clean $(ALL) rom runall run rungame
 
-ARCH = rv64
-#ARCH = rv32
+#ARCH = rv64
+ARCH = rv32
 
-#TEST = en
-#GAME = en
-
-COLOR_RED   = \033[1;31m
-COLOR_GREEN = \033[1;32m
-COLOR_YELLOW= \033[1;33m
-COLOR_BLUE  = \033[1;34m
-COLOR_PEPER = \033[1;35m
+COLOR_RED        = \033[1;31m
+COLOR_GREEN      = \033[1;32m
+COLOR_YELLOW     = \033[1;33m
+COLOR_BLUE       = \033[1;34m
+COLOR_PEPER      = \033[1;35m
 COLOR_DARK_GREEN = \033[1;36m
-COLOR_WHITE = \033[1;37m
-COLOR_NONE  = \033[0m
+COLOR_WHITE      = \033[1;37m
+COLOR_NONE       = \033[0m
 
 
-############################## direction ###############################
+############################## compiler ###############################
+
+ifeq ($(ARCH), rv64)
+CROSS_COMPILE = riscv64-linux-gnu
+endif
+
+ifeq ($(ARCH), rv32)
+#CROSS_COMPILE = riscv32-unknown-linux-gnu
+CROSS_COMPILE = riscv64-linux-gnu
+endif
+
+AS = $(CROSS_COMPILE)-gcc
+CC = $(CROSS_COMPILE)-gcc
+CXX = $(CROSS_COMPILE)-g++
+LD = $(CROSS_COMPILE)-ld
+OBJDUMP = $(CROSS_COMPILE)-objdump
+OBJCOPY = $(CROSS_COMPILE)-objcopy
+READELF = $(CROSS_COMPILE)-readelf
+OBJCOPY = $(CROSS_COMPILE)-objcopy
+
+
+############################## file path ###############################
 WORKDIR = $(shell pwd)
 DSTDIR = $(WORKDIR)/build
 $(shell mkdir -p $(DSTDIR))
 
-INCDIR += $(WORKDIR)/include
+INCDIR  = $(WORKDIR)/include
 SRCDIR  = $(WORKDIR)/src
 
 TESTDIR = $(SRCDIR)/tests
@@ -29,33 +47,24 @@ GAMEDIR = $(SRCDIR)/game
 LIBDIR  = $(SRCDIR)/libs
 
 
-ifeq ($(TEST),en)
+############################## objects ###############################
 
-SRCS = $(shell find $(TESTDIR) -name "$(NAME).c" -o -name "$(NAME).S")
-COMPILE_CPU_FLAGS += WAVE=en
-COMPILE_CPU_FLAGS += DIFFTEST=en
+ifeq ($(TEST),en)
+  SRCS = $(shell find $(TESTDIR) -name "$(NAME).c" -o -name "$(NAME).S")
 endif
 
 ifeq ($(GAME),en)
-
-NAME = game
-
-ROM_PATH = $(GAMEDIR)/nes
-ROMS     = $(shell ls $(ROM_PATH)/rom/*.nes)
-ROM_SRC  = $(addprefix $(ROM_PATH)/gen/, $(addsuffix .c, $(notdir $(basename $(ROMS)))))
-GAME_SRC = $(shell find -L $(GAMEDIR)/src/ -name "*.c" -o -name "*.cpp")
-#INCDIR += $(ROM_PATH)/gen/
-
-GAMEINC = $(sort $(dir $(shell find $(GAMEDIR) -name "*.h")))
-INCDIR += $(GAMEINC)
-
-SRCS = $(ROM_SRC) $(GAME_SRC) 
-
-CFLAGS += -DPSS_STYLE=1 -DPRAMESKIP -D__NO_FILE_SYSTEM__
-
+  NAME = game
+  ROM_PATH = $(GAMEDIR)/nes
+  ROMS     = $(shell ls $(ROM_PATH)/rom/*.nes)
+  ROM_SRC  = $(addprefix $(ROM_PATH)/gen/, $(addsuffix .c, $(notdir $(basename $(ROMS)))))
+  GAME_SRC = $(shell find -L $(GAMEDIR)/src/ -name "*.c" -o -name "*.cpp")
+  GAMEINC = $(sort $(dir $(shell find $(GAMEDIR) -name "*.h")))
+  INCDIR += $(GAMEINC)
+  SRCS = $(ROM_SRC) $(GAME_SRC) 
+  
 rom:
 	@-cd $(ROM_PATH) && python3 build-roms.py
-
 $(ROM_SRC): rom
 
 endif
@@ -81,19 +90,6 @@ RUNFILE = $(CPUDIR)/build/top
 
 default: $(IMAGE).bin
 
-############################## compiler ###############################
-CROSS_COMPILE = riscv64-linux-gnu
-#CROSS_COMPILE = riscv32-unknown-linux-gnu
-
-AS = $(CROSS_COMPILE)-gcc
-CC = $(CROSS_COMPILE)-gcc
-CXX = $(CROSS_COMPILE)-g++
-LD = $(CROSS_COMPILE)-ld
-OBJDUMP = $(CROSS_COMPILE)-objdump
-OBJCOPY = $(CROSS_COMPILE)-objcopy
-READELF = $(CROSS_COMPILE)-readelf
-OBJCOPY = $(CROSS_COMPILE)-objcopy
-
 
 ############################## flags ###############################
 ASFLAGS = -fno-pic -mcmodel=medany -mstrict-align -MMD
@@ -102,12 +98,12 @@ ifeq ($(ARCH),rv32)
 ASFLAGS += -march=rv32g -mabi=ilp32
 LDFLAGS = -melf32lriscv
 else
-ifeq ($(ARCH), rv64)
-ASFLAGS += -march=rv64g
-LDFLAGS = -melf64lriscv
-else
-	$(shell echo "error: ARCH has never defined as rv32 or rv64")
-endif
+  ifeq ($(ARCH), rv64)
+  ASFLAGS += -march=rv64g
+  LDFLAGS = -melf64lriscv
+  else
+  	$(shell echo "error: ARCH has never defined as rv32 or rv64")
+  endif
 endif
 
 INCFLAGS += $(addprefix -I, $(INCDIR))
@@ -117,18 +113,25 @@ ASFLAGS += $(INCFLAGS)
 CFLAGS += $(ASFLAGS)
 CFLAGS += -Wall -Werror -O0
 CFLAGS += -fno-asynchronous-unwind-tables -fno-builtin -fno-stack-protector -fdata-sections -ffunction-sections 
-#-fomit-frame-pointer
+CFLAGS += #-fomit-frame-pointer
 CFLAGS += -Wno-main -U_FORTIFY_SOURCE -static
 
 CXXFLAGS += $(CFLAGS) -ffreestanding -fno-rtti -fno-exceptions -DMAINARGS=\"mario\"
 CXXFLAGS += -D__CPP__
 
-#ASFLAGS += -O0
-
 LDFLAGS += -T $(WORKDIR)/script/linker.ld
 #LDFLAGS += --defsym=_pmem_start=0x80000000 --defsym=_entry_offset=0x0 
 LDFLAGS += --gc-sections 
 LDFLAGS += -e _start
+
+ifeq ($(TEST), en)
+  COMPILE_CPU_FLAGS += WAVE=en
+  #COMPILE_CPU_FLAGS += DIFFTEST=en
+endif
+
+ifeq ($(GAME), en)
+  CFLAGS += -DPSS_STYLE=1 -DPRAMESKIP -D__NO_FILE_SYSTEM__
+endif
 
 
 ############################## compile rules ###############################
@@ -161,10 +164,18 @@ $(IMAGE).bin: $(IMAGE).elf
 	@$(OBJDUMP) -d $^ > $(IMAGE)_dumpelf.txt
 
 $(RUNFILE):
-	make -C $(CPUDIR) -f $(CPUDIR)/Makefile $(COMPILE_CPU_FLAGS)
+	@echo +VERILATOR "->" top
+	make -C $(CPUDIR) -f $(CPUDIR)/Makefile $(COMPILE_CPU_FLAGS) ARCH=$(ARCH)
 
-wave:
-	gtkwave wave.vcd -a cpu.gtkw
+
+#RUN = run
+#$(RUN): %: $(IMAGE).bin $(RUNFILE)
+#	$(RUNFILE) --diff=$(CPUDIR)/riscv64-nemu-interpreter-so --bin=$< "+img_txt=$(IMAGE).txt"
+
+run: $(IMAGE).bin $(RUNFILE)
+	@echo "----------------------RUNNING------------------------------"
+	$(RUNFILE) --diff=$(CPUDIR)/riscv64-nemu-interpreter-so --bin=$< "+img_txt=$(IMAGE).txt"
+	@echo "----------------------FINISHED-----------------------------"
 
 dumpbin:
 	$(OBJDUMP) -D -b binary -m riscv:rv64 $(IMAGE).bin
@@ -172,36 +183,68 @@ dumpbin:
 dumpelf:
 	$(OBJDUMP) -d $(IMAGE).elf
 
-readelf:
-	vim $(IMAGE)_dumpelf.txt
 
-clean:
-	@rm -rf build Makefile.* .result
-	@rm -rf $(CPUDIR)/build
-
-
-RUN = rungame run
-
-$(RUN): %: $(IMAGE).bin $(RUNFILE)
-	$(RUNFILE) --diff=$(CPUDIR)/riscv64-nemu-interpreter-so --bin=$< "+img_txt=$(IMAGE).txt"
-
-
-RESULT = .result
+############################ run test ###################################
 
 ALL = $(basename $(notdir $(shell find $(TESTDIR) -name "*.c" -o -name "*.S")))
 
 $(ALL): %:
-	@if make -s NAME=$* run; then \
+	@if make -s NAME=$* TEST=en run; then \
 		printf "[%14s] $(COLOR_GREEN) PASS!$(COLOR_NONE) \n" $* >> $(RESULT) ; \
 	else \
 		printf "[%14s] $(COLOR_RED) FAIL!$(COLOR_NONE) \n" $* >> $(RESULT) ; \
 	fi
 	-@rm -f Makefile.$*
 
+RESULT = .result
+
 runall: $(ALL)
 	@cat $(RESULT)
 	@rm $(RESULT)
 
-none:
-	echo $(LIBOBJS)
+runtest:
+	@make -s run TEST=en
+
+showtest:
+	@echo $(ALL)
+
+########################## run mario #####################################
+
+rungame:
+	@make -s GAME=en run
+
+
+############################ others ######################################
+
+wave:
+	gtkwave wave.vcd -a cpu.gtkw
+
+readelf:
+	vim $(IMAGE)_dumpelf.txt
+
+clean:
+	rm -rf build Makefile.* .result
+	rm -rf $(CPUDIR)/build
+
+
+help:
+	@echo "  ####################### Help Info ##############################"
+	@echo "  Usage: make [target] [arguments]";
+	@echo "  Available targets:";
+	@echo ""
+	@echo "  TEST=en NAME=[testname]      :  compile a cpu test program from C language to a binary executable file"
+	@echo ""
+	@echo "  runtest NAME=[testname]      :  run a cpu test program"
+	@echo "  run TEST=en NAME=[testname]  :  run a cpu test program"
+	@echo "  runall ALL=[testname]        :  run a cpu test program"
+	@echo "  runall                       :  run all the cpu test programs and show whether they are passed"
+	@echo ""
+	@echo "  run GAME=en                  :  run the game mario      "
+	@echo "  rungame                      :  run the game mario      "
+	@echo ""
+	@echo "  clean                        :  clean the compiled file"
+	@echo "  wave                         :  watch the CPU wave generated after runing a cpu test program by gtkwave"
+	@echo "  showtest                     :  show the list of options [testname]"
+	@echo "  readelf NAME=[testname]      :  read the risc-v assembly instruction of [testname]. "
+	@echo "                                  You must run the test or compile the test before reading its assembly instruction"
 
